# esharp

./: Cargo.toml  LICENSE  README.md  STANDARD.md  test.esbin
src/: lib.rs  util.rs
src/tests/: mod.rs
src/vm/: alloc.rs  bin.rs  bvm.rs  function.rs  jit.rs  mod.rs  opcode.rs  operand.rs  types.rs  x86_64.asm
src/vm/bvm/: opcode.rs
src/vm/error/: jit.rs  mod.rs  page.rs
src/vm/meta/: platform.rs
src/vm/types/: array.rs  function.rs
